pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app
  namespace: dev
  labels:
    name: test-label
spec:
  containers:
  - name: test-container
    image: yarodash/test-app:latest
    tty: true
    stdin: true
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
