service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - nodePort: 30001
    protocol: TCP
    port: 80
    targetPort: 8000
